--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  text-align: center;
+}
+
 h1 {
   font-size: 150px;
   color: grey;
-  display: flex;
-  justify-content: center;
-  margin-top: 250px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+img {
+  width: 50%;
 }
