--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@
   padding: 0;
 }
 
+body {
+  background-image: url(./Contour\ Line.svg);
+}
+
 header {
   text-align: center;
 }
 
 h1 {
   font-size: 150px;
-  color: grey;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  color: white;
+  margin-top: 100px;
 }
 
-img {
-  width: 50%;
-}
